[package]
name = "backslash-z"
description = "Zweihander flavoured bot backend"
version = "0.1.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/pbzweihander/backslash-z"

[dependencies]
daumdic = "0.6.1"
daummap = "0.2.1"
airkorea = "0.3.0"
howto = "0.2.0"
regex = "1.1.0"
lazy_static = "1.2.0"
base64 = "0.10.0"
failure = "0.1.5"
futures = "0.1.25"
tokio = "0.1.13"
reqwest = "0.9.5"
serde_derive = "1.0.84"
serde = "1.0.84"
percent-encoding = "1.0.1"
