[package]
name = "backslash-z"
description = "Zweihander flavoured bot backend"
version = "0.2.0"
authors = ["pbzweihander <pbzweihander@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/pbzweihander/backslash-z"

[dependencies]
daumdic = "0.6.1"
daummap = "0.2.2"
airkorea = "0.4.0"
howto = "0.2.1"
regex = "1.1.4"
lazy_static = "1.3.0"
failure = "0.1.5"
futures = "0.1.25"
serde_derive = "1.0.89"
serde = "1.0.89"
